--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="peace_3538088.png">
+  <link rel="icon" href="assets/favicon.png">
   <title>Rock - Paper - Scissors</title>
 
   <style>
